# s3k

kern/platform/: meson.build
projects/hello/app1/: meson.build
projects/ipc/: meson.options
projects/ipc/app1/: meson.build
projects/ipc/app2/: meson.build
projects/ipc/app2/platform/: ti16750.c
projects/tutorials-v2/: README.md  meson.build  meson.options
projects/tutorials-v2/common/: init2.c  meson.build  utils.c  utils.h
projects/tutorials-v2/platform/: meson.build  qemu_virt.ld
projects/tutorials-v2/tutorial.01.hello-world/: meson.build
projects/tutorials-v2/tutorial.01.hello-world/app1/: app1.ld  meson.build
projects/tutorials-v2/tutorial.02.trap-handler/: meson.build
projects/tutorials-v2/tutorial.02.trap-handler/app1/: main.c  meson.build
projects/tutorials-v2/tutorial.02.trap-handler/app2/: main.c  meson.build
projects/tutorials-v2/tutorial.04.timing-cap/: meson.build
projects/tutorials-v2/tutorial.04.timing-cap/app1/: main.c  meson.build
projects/tutorials-v2/tutorial.04.timing-cap/app2/: app2.ld  main.c  meson.build
projects/tutorials-v2/tutorial.05.rpc/: meson.build
projects/tutorials-v2/tutorial.05.rpc/app1/: main.c  meson.build
projects/tutorials-v2/tutorial.05.rpc/app2/: main.c  meson.build
